@@ -4,8 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 2.1-18 (opened July 30, 2012)
 
-	* envift: got labels() method that returns the labels used in
-	plot().
+	* envift: the plot() method gained argument 'labels' to change the
+	default labels. The default labels are displayed with the new
+	labels() function.
 	
 Version 2.1-17 (closed July 30, 2012)
 
